src/test/deca/context/valid/created/testPrint/printlnMultiple.deca
// Description :
//    Test de l'affichage de plusieurs chaînes de caractères avec println
//
// Résultats :
//    ok

{
   println("Hello", "world", "!", 3, -8);
}